# github-account-switcher

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml  renovate.json
.config/: .secrets.baseline
.github/workflows/: ci.yml
src/gh_switcher/: __main__.py  accounts.py  app.py  autostart.py  config.py  icons.py  identity.py  notifications.py  switcher.py
src/gh_switcher/tray/: __init__.py  base.py  pystray_backend.py  xapp.py
